--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : https://grape0919.github.io/ # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
-title   : DEVELOPER\'s BLOG
+title   : 홍's DEVELOPER BLOG
 description: > # this means to ignore newlines until "Language & timezone"
-  개발자 블로그
+ 개발자 홍의 개발 블로그
 
 
 ## => Language and Timezone
