--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ timezone: ROK # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 ## => Author and Social
 ##############################
 author:
-  type      : # "person" (default), "organization"
+  type      : "person" # "person" (default), "organization"
   name      : "grape0919"
   url       : "grare0919.github.io"
-  avatar    : # path or url of avatar image (square)
+  avatar    : "https://avatars1.githubusercontent.com/u/30318115?s=460&v=4" # path or url of avatar image (square)
   bio       : "I am a Developer"
   email     : "ghdry2563@gmail.com"
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
