--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -47,7 +47,7 @@ header:
       fr-FR   : *FR
       fr-LU   : *FR
       # @end locale config
-    url: /base.html
+    url: /none.html
     
   - titles:
       # @start locale config
