--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,29 @@
 header:
+- titles:
+      # @start locale config
+      en      : &EN       Blog
+      en-GB   : *EN
+      en-US   : *EN
+      en-CA   : *EN
+      en-AU   : *EN
+      zh-Hans : &ZH_HANS  Blog
+      zh      : *ZH_HANS
+      zh-CN   : *ZH_HANS
+      zh-SG   : *ZH_HANS
+      zh-Hant : &ZH_HANT  Blog
+      zh-TW   : *ZH_HANT
+      zh-HK   : *ZH_HANT
+      ko      : &KO       블로그
+      ko-KR   : *KO
+      fr      : &FR       Blog
+      fr-BE   : *FR
+      fr-CA   : *FR
+      fr-CH   : *FR
+      fr-FR   : *FR
+      fr-LU   : *FR
+      # @end locale config
+    url: /home.html
+
   - titles:
       # @start locale config
       en      : &EN       Archive
@@ -31,11 +56,11 @@ header:
       en-US   : *EN
       en-CA   : *EN
       en-AU   : *EN
-      zh-Hans : &ZH_HANS  作品集
+      zh-Hans : &ZH_HANS  Portfolio
       zh      : *ZH_HANS
       zh-CN   : *ZH_HANS
       zh-SG   : *ZH_HANS
-      zh-Hant : &ZH_HANT  作品集
+      zh-Hant : &ZH_HANT  Portfolio
       zh-TW   : *ZH_HANT
       zh-HK   : *ZH_HANT
       ko      : &KO       포트폴리오
