--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -49,29 +49,7 @@ header:
       # @end locale config
     url: /archive.html
 
-  - titles:
-      # @start locale config
-      en      : &EN       Portfolio
-      en-GB   : *EN
-      en-US   : *EN
-      en-CA   : *EN
-      en-AU   : *EN
-      zh-Hans : &ZH_HANS  Portfolio
-      zh      : *ZH_HANS
-      zh-CN   : *ZH_HANS
-      zh-SG   : *ZH_HANS
-      zh-Hant : &ZH_HANT  Portfolio
-      zh-TW   : *ZH_HANT
-      zh-HK   : *ZH_HANT
-      ko      : &KO       포트폴리오
-      ko-KR   : *KO
-      fr      : &FR       Portefeuille
-      fr-BE   : *FR
-      fr-CA   : *FR
-      fr-CH   : *FR
-      fr-FR   : *FR
-      fr-LU   : *FR
-      # @end locale config
+  - titles: Portfolio
       children: 
         - title: Curriculum Vitae
           url: /
