--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ header:
     url: /archive.html
 
   - title: Portfolio
-    url: /samples.html
+    url: /portfolio
     
   - title: About
     url: /about.html
