--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,5 +11,11 @@ header:
     
   - title: About
     url: /about.html
+
+layouts:
+  - title: Layouts
+    children:
+      - title:  Solution sample1
+        url:    /solutions/solution1.html
     
 
