Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   _data/navigation.yml

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,6 @@ header:
   # - title: Solutions
   #   children:
   - title:  Solution
-    url:    /solutions/solution1.html
+    url:    /solutions
     
 
