--- a/_config.yml
+++ b/_config.yml
@@ -224,13 +224,10 @@ plugins:
   - jekyll-sitemap
   - jemoji
 
-
+collections-dir: docs
 collections:
-  - solutions
-  - portfolio
-  - memories
-
-collections:
+  docs:
+    output: true
   solutions:
     output: true
   memories:
